--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         <!-- /.container-fluid -->
     </nav>
 
+    <a href="https://github.com/sarthfrey" target="_blank"><img id="ribbon" style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
+        
     <!-- Header -->
     <header>
         <div class="container">
@@ -77,7 +79,7 @@
                     <div class="intro-text">
                         <span class="name">Sarth Frey</span>
                         <hr class="star-light">
-                        <span class="skills">Software Engineer - Data Scientist - App Inventor</span>
+                        <span class="skills">A thinker who likes to tinker</span>
                     </div>
                     <br><br>
                     <img class="img-responsive" src="img/uofthacks.jpg" alt="">
@@ -98,26 +100,29 @@
             <br>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> I'm heading into my first year as a Software Engineering student at the University of Waterloo, where I want to
-                    develop my interests, learn more, and contribute to the community. Later on, I'll continue to learn about
-                    software, computer science, and math, and perhaps work in the software industry.
+                    <p> I'm going into my first year as a Software Engineering student at the University of Waterloo. At university, I want to 
+                    develop my interests, learn more, and contribute to industry and the academic community. Later on, I plan to continue to learn about
+                    software, computer science, and math, and perhaps work in the software industry through a full-time position.
                     My dream is to be successful in pursuing wherever my passion takes me.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>
-                        Languages: Python, Java, C++, LabVIEW, Javascript, PHP, Go, and Arduino.
+                        <b>Languages</b>: Python, Java, C++, LabVIEW, Javascript, PHP, Go, and Arduino.
                     </p>
                     <p>
-                        Frameworks and Libraries: Pyglet, SciKit Learn, Android SDK, and Windriver.
+                        <b>Frameworks and Libraries</b>: Pyglet, SciKit Learn, Android SDK, and Windriver.
                     </p>
                     <p>
-                        IDEs: Netbeans, Eclipse, Android Studio, IDLE, PyCharm, and Arduino IDE.
+                        <b>Datastores</b>: MySQL and very basic MongoDB.
                     </p>
                     <p>
-                        Editors: Atom, Sublime Text, Notepad++.
+                        <b>Markup</b>: HTML and XML.
                     </p>
                     <p>
-                        Markup: HTML and XML.
+                        <b>IDEs</b>: Netbeans, Eclipse, Android Studio, IDLE, PyCharm, and Arduino IDE.
+                    </p>
+                    <p>
+                        <b>Editors</b>: Atom, Sublime Text, Notepad++.
                     </p>
                 </div>
             </div>
