--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script type="text/javascript">
+        (function() {
+            var link_element = document.createElement("link"),
+                s = document.getElementsByTagName("script")[0];
+            if (window.location.protocol !== "http:" && window.location.protocol !== "https:") {
+                link_element.href = "http:";
+            }
+            link_element.href += "//fonts.googleapis.com/css?family=Poiret+One:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800";
+            link_element.rel = "stylesheet";
+            link_element.type = "text/css";
+            s.parentNode.insertBefore(link_element, s);
+        })();
+    </script>
+
 </head>
 
 <body id="page-top" class="index">
@@ -44,11 +58,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Sarth Frey</a>
+                <a class="navbar-brand" href="#page-top">SARTH FREY</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
                         <a href="#page-top"></a>
@@ -101,7 +115,7 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
                     <p> I'm going into my first year as a Software Engineering student at the University of Waterloo. At university, I want to 
-                    develop my interests, learn more, and contribute to industry and the academic community. Later on, I plan to continue to learn about
+                    develop my interests, learn more, contribute to the academic community, and work on interesting projects. Later on, I plan to continue to learn about
                     software, computer science, and math, and perhaps work in the software industry through a full-time position.
                     My dream is to be successful in pursuing wherever my passion takes me.</p>
                 </div>
