--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,7 +37,7 @@
             if (window.location.protocol !== "http:" && window.location.protocol !== "https:") {
                 link_element.href = "http:";
             }
-            link_element.href += "//fonts.googleapis.com/css?family=Poiret+One:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800";
+            link_element.href += "//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800";
             link_element.rel = "stylesheet";
             link_element.type = "text/css";
             s.parentNode.insertBefore(link_element, s);
@@ -84,7 +85,7 @@
     </nav>
 
     <a href="https://github.com/sarthfrey" target="_blank"><img id="ribbon" style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
-        
+
     <!-- Header -->
     <header>
         <div class="container">
@@ -114,7 +115,7 @@
             <br>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p> I'm going into my first year as a Software Engineering student at the University of Waterloo. At university, I want to 
+                    <p> I'm going into my first year as a Software Engineering student at the University of Waterloo. At university, I want to
                     develop my interests, learn more, contribute to the academic community, and work on interesting projects. Later on, I plan to continue to learn about
                     software, computer science, and math, and perhaps work in the software industry through a full-time position.
                     My dream is to be successful in pursuing wherever my passion takes me.</p>
