--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-5 col-lg-offset-1">
                     <p> I'm going into my first year as a Software Engineering student at the University of Waterloo. At university, I want to
                     develop my interests, learn more, contribute to the academic community, and work on interesting projects. Later on, I plan to continue to learn about
                     software, computer science, and math, and perhaps work in the software industry through a full-time position.
                     My dream is to be successful in pursuing wherever my passion takes me.</p>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-5">
                     <p>
                         <b>Languages</b>: Python, Java, C++, LabVIEW, Javascript, PHP, Go, and Arduino.
                     </p>
@@ -197,34 +197,27 @@
             </div>
             <br>
             <div class="row">
-                <div class="col-sm-4 portfolio-item" id="portItem1">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
+                <a  href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <div class="col-sm-4 portfolio-item box" id="portItem1">
+                        <div class="overlay">
 
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item" id="portItem2">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
                         </div>
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item" id="portItem3">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                    </div>
+                </a>
+                <a  href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <div class="col-sm-4 portfolio-item box" id="portItem2">
+                        <div class="overlay">
+
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </a>
+                <a  href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <div class="col-sm-4 portfolio-item box" id="portItem3">
+                        <div class="overlay">
+
+                        </div>
+                    </div>
+                </a>
                 <!-- <div class="col-sm-4 portfolio-item" id="portItem4">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
