--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             </li>
                         </ul> -->
                         <hr class="star-light">
-                        <span class="skills">*Insert dank slogan here*</span>
+                        <span class="skills">Under construction.</span>
                     </div>
                     <br><br>
                     <ul class="list-inline">
