--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         </li>
                         <li></li><li></li><li></li><li></li>
                         <li>
-                            <img class="img-responsive" src="img/uofthacks.jpg" alt="">
+                            <img class="img-responsive" src="img/pp1 copy.jpg" alt="">
                         </li>
                         <li></li><li></li><li></li><li></li>
                         <li>
