--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>My Portfolio</h2>
+                    <h2>My Portfolio (still adding everything)</h2>
                     <hr class="star-light">
                 </div>
             </div>
