--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 	<head>
 	</head>
 	<body>
-		<object data="/img/resume.pdf" type="application/pdf" width="1200" height="1500">
+		<object data="/img/resume.pdf" type="application/pdf" width="1200" height="100%">
 			alt : <a href="/img/resume.pdf">resume</a>
 		</object>
 	</body>
