--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Sarth Frey</title>
-  <meta name="description" content="Computer Science student at the University of Florida.
+  <meta name="description" content="Software Engineering student at the University of Waterloo.
 ">
 
   <link rel="stylesheet" href="./jacobjenkins_files/main.css">
