--- a/projects.html
+++ b/projects.html
@@ -82,8 +82,7 @@
 
 <a href="https://github.com/sarthfrey/sleephacks"><h3 id="tracktag">SleepHacks</h3></a>
 
-<p>A web application allowing users to tag songs and artist names with pop-culture
-references. Built with Python, Flask, Jinja2, and SQLAlchemy.</p>
+<p>A web service that allows travelling hackathon hackers to stay with locals.</p>
 
   </article>
 
