--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div style="text-align:center">
   <img src="./img/me.png" width="200" align="center" style="margin-bottom:30px; border-radius:200px">
 </div>
-<p><code>> <span style="color:orange;">import</span> sarth <span style="color:orange;">from</span> humans</code></p>
+<p><code>> <span style="color:orange;">from</span> humans <span style="color:orange;">import</span> sarth</code></p>
 
 <p>I'm a 1B Software Engineering student at the University of Waterloo. I enjoy working on interesting <a href="projects.html">projects</a> and learning new <a href="courses.html ">things.</a> When done my degree I want to take up a full-time software job and continue to learn whatever my heart desires. Currently I'm looking for internship opportunities during the summer of 2016.</p>
 
